author : array > string, new property : originalTile
